--- a/angular.json
+++ b/angular.json
@@ -126,6 +126,10 @@
               "devServerTarget": "angular-firebase-login:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
